--- a/src/components/Book.css
+++ b/src/components/Book.css
@@ -2,7 +2,6 @@
   display: flex;
   gap: 4px;
   list-style: none;
-  border-bottom: 2px solid;
 }
 
 * {
@@ -11,5 +10,53 @@
 }
 
 .main {
-  margin: 12px 0 12px 0;
+  /* margin: 12px 0 12px 0; */
+}
+
+.card {
+  width: 75rem;
+  height: 10.625rem;
+  /* margin: 2.313rem 6.25rem 0; */
+  padding: 2rem 9.188rem 1.625rem 1.688rem;
+  border-radius: 4px;
+  border: solid 1px #e8e8e8;
+  background-color: #fff;
+}
+
+.category {
+  width: 75rem;
+  height: 10.625rem;
+  /* margin: 2.313rem 6.25rem 0; */
+  padding: 2rem 9.188rem 1.625rem 1.688rem;
+  border-radius: 4px;
+  border: solid 1px #e8e8e8;
+  background-color: #fff;
+}
+
+.title {
+  width: 12.313rem;
+  height: 1.813rem;
+  margin: 0.188rem 20.188rem 0 0;
+  font-family: RobotoSlab;
+  font-size: 1.375rem;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: -0.2px;
+  color: #121212;
+}
+
+.author {
+  width: 6.688rem;
+  height: 1.188rem;
+  margin: 0.25rem 0 0;
+  font-family: RobotoSlab;
+  font-size: 0.875rem;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #4386bf;
 }
