--- a/src/components/Book.css
+++ b/src/components/Book.css
@@ -15,17 +15,27 @@
 .list li {
   border-right: #e8e8e8 solid 1px;
   padding-right: 0.938rem;
-  font-family: Roboto Slab;
+  font-family: 'Roboto Slab', serif;
   color: #4386bf;
   cursor: pointer;
   font-weight: 300;
+}
+
+.progress-info button {
+  background-color: #0290ff;
+  color: #fff;
+  border: none;
+  padding: 12px;
+  border-radius: 4px;
+  font-family: 'Roboto Slab', serif;
+  font-weight: 400;
 }
 
 .list li:last-child {
   border: none;
 }
 
-.list li:nth-child(2) button{
+.list li:nth-child(2) button {
   border: none;
   background: none;
   outline: inherit;
@@ -48,9 +58,9 @@
 }
 
 .category {
-  margin: 0.25rem 0 1rem  0;  
-  border-radius: 4px;  
-  color: #121212;  
+  margin: 0.25rem 0 1rem  0;
+  border-radius: 4px;
+  color: #121212;
   opacity: 0.5;
   font-weight: 700;
   font-size: 0.9rem;
@@ -58,9 +68,8 @@
 }
 
 .title {
-  /* width: 8.688rem; */
   margin: 0.188rem 0 0.75rem 0;
-  font-family: Roboto Slab;
+  font-family: 'Roboto Slab', serif;
   font-size: 1.375rem;
   font-weight: 700;
   letter-spacing: -0.2px;
@@ -70,7 +79,7 @@
 .author {
   height: 1.188rem;
   margin: 0.25rem 0 0;
-  font-family: Roboto Slab;
+  font-family: 'Roboto Slab', serif;
   font-size: 0.9rem;
   font-weight: 400;
   color: #4386bf;
@@ -84,7 +93,7 @@
   display: flex;
   align-items: center;
   position: relative;
-  left: 100px
+  left: 100px;
 }
 
 .percentage {
@@ -95,13 +104,13 @@
 }
 
 .percentage p:first-child {
-  font-family: Montserrat;
+  font-family: 'Montserrat', sans-serif;
   font-size: 2rem;
   color: #121212;
 }
 
 .percentage p:last-child {
-  font-family: Montserrat;
+  font-family: 'Montserrat', sans-serif;
   opacity: 0.5;
   color: #121212;
   font-size: 0.875rem;
@@ -117,21 +126,10 @@
 .progress-info p:first-child {
   font-size: 0.813rem;
   font-weight: 400;
-  font-family: Roboto Slab;
-  color: #121212
+  font-family: 'Roboto Slab', serif;
+  color: #121212;
 }
 
 .progress-info p:nth-child(2) {
-  font-weight: 400;
-
-}
-
-.progress-info button {
-  background-color: #0290ff;
-  color: #fff;
-  border: none;
-  padding: 12px;
-  border-radius: 4px;
-  font-family: Roboto Slab;
   font-weight: 400;
 }
