--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,14 +1,14 @@
 
 * {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 .list-item-books {
   width: 3.688rem;
   height: 1rem;
   margin: 1.125rem 2.563rem 0.688rem 0;
-  font-family: Montserrat;
+  font-family: 'Montserrat', sans-serif;
   font-size: 0.813rem;
   font-weight: normal;
   font-stretch: normal;
@@ -19,7 +19,7 @@
 }
 
 .list-item-books a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .list-item-cat {
@@ -27,55 +27,54 @@
   height: 1rem;
   margin: 1.125rem 20rem 0.688rem 2.563rem;
   opacity: 0.5;
-  font-family: Montserrat;
+  font-family: 'Montserrat', sans-serif;
   font-size: 0.813rem;
   letter-spacing: 1.9px;
   color: #121212;
 }
 
 .list-item-cat a {
-    text-decoration: none;
-    color: #121212;
+  text-decoration: none;
+  color: #121212;
 }
 
 .icon {
-    width: 2.813rem;
-    height: 2.813rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    background-color: #e8e8e8;
-    justify-items: end;
+  width: 2.813rem;
+  height: 2.813rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: #e8e8e8;
+  justify-items: end;
 }
 
 .icon svg {
-    color: #0290ff;
+  color: #0290ff;
 }
 
 .nav-bar {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .header {
-    padding: 1.438rem 6.188rem 1.688rem 6.25rem;
-    background-color: white;
-    border-bottom: 1px #e8e8e8 solid;
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .header h1 {
-    width: rem;
-    height: 2.313rem;
-    margin: 0.375rem 2.938rem 0.125rem 0;
-    font-family: Montserrat;
-    font-size: 1.875rem;
-    font-weight: bold;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: normal;
-    letter-spacing: normal;
-    color: #0290ff;
-  }
+  padding: 1.438rem 6.188rem 1.688rem 6.25rem;
+  background-color: white;
+  border-bottom: 1px #e8e8e8 solid;
+  display: flex;
+  justify-content: space-between;
+}
+
+.header h1 {
+  height: 2.313rem;
+  margin: 0.375rem 2.938rem 0.125rem 0;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.875rem;
+  font-weight: bold;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #0290ff;
+}
